Fixed overflow part 2

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ button {
 
 html, body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   overflow-x: hidden; }
 
 body {
